<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_500"
    tools:context=".ui.creatematerial.CreateMaterial">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_500"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Back"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/CustomToolbarTextAppearance"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <View
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_view"
        android:layout_below="@+id/top_view" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo2" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/dmsans_bold"
        android:layout_marginStart="40dp"
        android:layout_above="@+id/grid_view"
        android:layout_marginBottom="20dp"
        android:text="@string/create_material" />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/dmsans_bold"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/logo"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/logo"
        android:layout_below="@+id/app_name"
        android:layout_marginBottom="10dp"
        android:text="@string/slogan" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nMaterialTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/nMaterial" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nMaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jMaterialLayoutText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/jMaterial" >

                <AutoCompleteTextView
                    android:id="@+id/jMaterialDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dMaterialLayoutText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/dMaterial" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dMaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pnPemasokLayoutText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/pnPemasok" >

                <AutoCompleteTextView
                    android:id="@+id/pnPemasokDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jmMaterialLayoutText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/jmMaterial" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jmMaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tpMaterialLayoutText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/tpMaterial" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tpMaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fMaterialLayoutText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/fMaterial" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fMaterialEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:ems="10"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/materialImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/material_photo"
                android:src="@drawable/ic_place_holder" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:rowCount="2"
                android:columnCount="2">

                <Button
                    android:id="@+id/btnGallery"
                    android:backgroundTint="@color/primary_300"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginEnd="10dp"
                    android:text="@string/gallery"/>

                <Button
                    android:id="@+id/btnCamera"
                    android:backgroundTint="@color/primary_500"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/camera" />

            </GridLayout>

            <Button
                android:id="@+id/btnCMaterial"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/dmsans_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCreate"
                android:backgroundTint="@color/primary_500"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>