<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_500"
    tools:context=".ui.processingproduct.detailprocessing.DetailProcessing">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <View
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_view"
        android:layout_below="@+id/top_view" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo2" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_above="@+id/grid_view"
        android:layout_marginBottom="20dp"
        android:text="@string/processing_product" />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/logo"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/logo"
        android:layout_below="@+id/app_name"
        android:layout_marginBottom="10dp"
        android:text="@string/slogan" />

    <FrameLayout
        android:id="@+id/container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view">

    </FrameLayout>

</RelativeLayout>