<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.listmaterial.detailmaterial.InformationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            card_view:cardCornerRadius="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/logo" />

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/img_item_photo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/nMaterial"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                    card_view:layout_constraintTop_toTopOf="@+id/img_item_photo" />

                <TextView
                    android:id="@+id/tv_item_description"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/dMaterial"
                    android:ellipsize="end"
                    android:maxLines="2"
                    card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
                    card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                    card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
                    card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                    card_view:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:layout_below="@+id/card_view">

            <TextView
                android:id="@+id/nSupplier"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nSupplier" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PT. Pemasok Sejahtera" />
            
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="visible"
                android:background="@color/dark_grey" />

            <TextView
                android:id="@+id/aSupplier"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aSupplier" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jl. Kapten Maulana Lubis No.9 Medan" />

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="visible"
                android:background="@color/dark_grey" />

            <TextView
                android:id="@+id/pDate"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pDate" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20 April 2024" />

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="visible"
                android:background="@color/dark_grey" />

            <TextView
                android:id="@+id/mAmount"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mAmount" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="123" />
            
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>